--- a/autoddl4j/pom.xml
+++ b/autoddl4j/pom.xml
@@ -56,6 +56,11 @@
 			<version>5.3.23</version>
 		</dependency>
 		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.10.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.3.23</version>
