--- a/autoddl4j/pom.xml
+++ b/autoddl4j/pom.xml
@@ -33,6 +33,11 @@
 	        <scope>provided</scope>
 	    </dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
