--- a/autoddl4j/pom.xml
+++ b/autoddl4j/pom.xml
@@ -71,6 +71,11 @@
 			<version>5.3.23</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>5.3.23</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
