--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>oss-parent</artifactId>
         <version>7</version>
     </parent>
-    <groupId>com.lesterlaucn</groupId>
+    <groupId>tech.mozhou</groupId>
     <artifactId>autoddl4j-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0.RELEASE</version>
